# neo4j-graphrag-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/raw_docs/: api_reference.md  approval_workflow.md  attachment_management.md  inventory.md  procurement.md
docs/: blog-post-cn.md  blog-post-en.md
docs/superpowers/plans/: 2026-06-15-neo4j-graphrag-agent.md
docs/superpowers/specs/: 2026-06-15-neo4j-graphrag-agent-design.md
examples/: build_graph.py  graphrag_demo.py  text2cypher_demo.py
src/graphrag_agent/: cli.py
src/graphrag_agent/agent/: answerer.py  router.py  tools.py
src/graphrag_agent/api/: main.py
src/graphrag_agent/extraction/: models.py  rule_extractor.py
src/graphrag_agent/graph/: graph_loader.py  neo4j_client.py  safety.py
src/graphrag_agent/ingestion/: document.py  loader.py
src/graphrag_agent/ontology/: schema.py
src/graphrag_agent/retrieval/: chunker.py  embedder.py  vector_store.py
src/graphrag_agent/text2cypher/: generator.py  intent_classifier.py  templates.py
src/neo4j_graphrag_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_agent.py  test_api.py  test_extraction.py  test_graph.py  test_ingestion.py  test_ontology.py  test_retrieval.py  test_text2cypher.py
tests/fixtures/: sample_procurement.md
