[project]
name = "neo4j-graphrag-agent"
version = "0.1.0"
description = "A GraphRAG agent that converts enterprise documents into a Neo4j knowledge graph."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0",
    "typer>=0.12.0",
    "neo4j>=5.18.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=2.6.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
graphrag = "graphrag_agent.cli:main"
